feat(api):add get post api
